# VFScore

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_ANALYSIS.md  BUILD_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  COST_PROTECTION_GUIDE.md  E2E_IMPLEMENTATION_COMPLETE.md  FIRST_PUSH_CHECKLIST.md  FIRST_RUN_CHECKLIST.md  FIXES_SUMMARY.md  GITHUB_SETUP.md  GRPC_WARNING_FIX.md  GUIDE.md  INDEX_VARIANT_ANALYSIS.md  INTEGRATION_STRATEGY.md  MODEL_UPDATE.md  PROJECT_NOTES.md  PROJECT_STATUS.md  QUICKSTART.md  QWEN.md  README.md  README_VARIANT_ANALYSIS.md  REORGANIZATION_SUMMARY.md  SETUP.md  VALIDATION_README.md  VALIDATION_STUDY_FIXES.md  VARIANT_ANALYSIS.md  VARIANT_ANALYSIS_SUMMARY.json  VARIANT_FIX_REFERENCE.txt  config.cost_protection.example.yaml  config.multikey.example.yaml  config.template.yaml  config.yaml  copy_validation_files.py  create_analysis.py  database.csv  (+12 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: subjective.csv
metadata/: categories.csv
scripts/: start_vfscore.bat  test_multikey_setup.py
src/vfscore/: __init__.py  __main__.py  aggregate.py  config.py  ingest.py  packetize.py  (+6 more)
tests/: __init__.py  test_installation.py  test_phase1.py  test_setup.py
validation_results_20251025_081126/: cost_estimate.json
validation_study/: CHANGELOG.md  GUIDE.md  README.md  validation_report_generator.py  validation_report_generator_enhanced.py  validation_study.py  validation_study_OLD.py
vfscore/: __init__.py  config.yaml
(+24 files in other folders)
